# google-music-utils

./: .coveragerc  .flake8  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md
docs/: Makefile  conf.py  index.rst  make.bat
src/google_music_utils/: __about__.py  __init__.py  compare.py  constants.py  filter.py  metadata.py  misc.py  utils.py
tests/: fixtures.py  test_compare.py  test_filter.py  test_metadata.py  test_misc.py  test_utils.py
tests/test_files/: test_file_1.flac  test_file_2.flac  test_file_3.flac
