[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "google-music-utils"
description = "A set of utility functionality for google-music and related projects."
version = "2.0.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music-utils"
homepage = "https://github.com/thebigmunch/google-music-utils"

[tool.poetry.dependencies]
python = "^3.6"

audio-metadata= "^0.3"
multidict = "^4.0"
wrapt = "^1.10"

coverage = { version = "^4.5", optional = true }
flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0.0", optional = true }
pytest = { version = "^4.0", optional = true }
sphinx = { version = "^1.7", optional = true }
tox = { version = "^2.9", optional = true }

[tool.poetry.extras]
dev = [ "coverage", "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm", "pytest", "sphinx", "tox" ]
doc = [ "sphinx" ]
lint = [ "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm" ]
test = [ "coverage", "pytest", "tox" ]
