[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "google-music-utils"
description = "A set of utility functionality for google-music and related projects."
version = "2.2.1"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music-utils"
homepage = "https://github.com/thebigmunch/google-music-utils"

[tool.poetry.dependencies]
python = "^3.6"

audio-metadata = "^0.6"
more-itertools = ">=4.0,<8.0"
multidict = "^4.0"
wrapt = "^1.0"

coverage = { version = "^4.5", optional = true }
flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-comprehensions = { version = "^2.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0.0", optional = true }
nox = { version = "^2019", optional = true }
pytest = { version = ">=4.0,<6.0", optional = true }
sphinx = { version = "^2.0", optional = true }

[tool.poetry.extras]
dev = [
	"coverage",
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
	"nox",
	"pytest",
	"sphinx"
]
doc = [
	"sphinx",
]
lint = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm"
]
test = [
	"coverage",
	"nox",
	"pytest",
]
